SFUSA/force-app/main/default/objects/User/fields/Access_Group__c.field-meta.xml
<CustomField>
        <fullName>Access_Group__c</fullName>
        <defaultValue>"EXTERNAL"</defaultValue>
        <label>Access Group</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>