SFUSA/force-app/main/default/objects/User/fields/Customer_Priority__c.field-meta.xml
<CustomField>
        <fullName>Customer_Priority__c</fullName>
        <label>Customer Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>VIP</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>