SFUSA/force-app/main/default/objects/User/fields/Default_Case_List_View__c.field-meta.xml
<CustomField>
        <fullName>Default_Case_List_View__c</fullName>
        <description>Sets the default case list view for the Customer Community</description>
        <inlineHelpText>Sets the default case list view for the Customer Community</inlineHelpText>
        <label>Default Case List View</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Recently Viewed</fullName>
                </value>
                <value>
                    <fullName>My Single Barrel Orders</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>