SFUSA/force-app/main/default/objects/User/fields/GBS_Centers__c.field-meta.xml
<CustomField>
        <fullName>GBS_Centers__c</fullName>
        <label>GBS Centers</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>US</fullName>
                </value>
                <value>
                    <fullName>MX</fullName>
                </value>
                <value>
                    <fullName>ES</fullName>
                </value>
                <value>
                    <fullName>SG</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>SBFE</fullName>
                </value>
                <value>
                    <fullName>Madrid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>