SFUSA/force-app/main/default/objects/User/fields/GBS_VIP_User__c.field-meta.xml
<CustomField>
        <fullName>GBS_VIP_User__c</fullName>
        <description>Field identifies users as VIP for the GBS Community; this field, when checked, will enable users to see categories that the user would not otherwise have the ability to see. Further, this field may drive tighter SLAs.</description>
        <inlineHelpText>Field identifies users as VIP for the GBS Community; this field, when checked, will enable users to see categories that the user would not otherwise have the ability to see. Further, this field may drive tighter SLAs.</inlineHelpText>
        <label>GBS VIP User</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>VIP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>