SFUSA/force-app/main/default/objects/User/fields/isBailmentUser__c.field-meta.xml
<CustomField>
        <fullName>isBailmentUser__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bailment User</label>
        <type>Checkbox</type>
    </CustomField>