SFUSA/force-app/main/default/objects/User/fields/Military__c.field-meta.xml
<CustomField>
        <fullName>Military__c</fullName>
        <label>Military?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Military</fullName>
                </value>
                <value>
                    <fullName>Military Export</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>