SFUSA/force-app/main/default/objects/User/fields/Regional_Diplomat_Regions__c.field-meta.xml
<CustomField>
        <fullName>Regional_Diplomat_Regions__c</fullName>
        <label>Regional Diplomat Regions</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>States</valueSetName>
        </valueSet>
    </CustomField>