SFUSA/force-app/main/default/objects/User/fields/Represented_States__c.field-meta.xml
<CustomField>
        <fullName>Represented_States__c</fullName>
        <description>(Compliance) A location to assign a user to one or more states for representing Compliance cases, such as Quote Requests assignment, Quote Request submission, Brand Registration Sub Cases, and more.</description>
        <inlineHelpText>Assigned state in the Compliance workflow</inlineHelpText>
        <label>Represented States</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>States</valueSetName>
        </valueSet>
    </CustomField>