SFUSA/force-app/main/default/objects/User/fields/VIPV__c.field-meta.xml
<CustomField>
        <fullName>VIPV__c</fullName>
        <formula>IF(INCLUDES(VIP__c,"Customer Service"),"Customer Service;",NULL)+IF(INCLUDES(VIP__c ,"HR"),"HR;",NULL)+IF(INCLUDES(VIP__c,"PTP/AP"),"PTP/AP;",NULL)+IF(INCLUDES(VIP__c,"Payroll"),"Payroll;",NULL)+IF(INCLUDES(VIP__c,"Tax"),"Tax;",NULL)+IF(INCLUDES(VIP__c,"Claims"),"Claims;",NULL)+IF(INCLUDES(VIP__c,"RTR"),"RTR;",NULL)+IF(INCLUDES(VIP__c,"T&amp;E"),"T&amp;E;",NULL)+IF(INCLUDES(VIP__c,"GMDM"),"GMDM;GMDM - Materials;GMDM - Cost Center Change;GMDM - Customer Hierarchy;GMDM - Customer Maintenance;GMDM - EDW Mapping;GMDM - GL Account Change/Extend;GMDM - Rebates;GMDM - Simple Request;GMDM - Vendor Maintenance",NULL)+IF(INCLUDES(VIP__c,"OTC Billing"),"OTC Billing;",NULL)+IF(INCLUDES(VIP__c,"GBS"),"GBS;",NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VIP Selected Val</label>
        <type>Text</type>
    </CustomField>