SFUSA/force-app/main/default/objects/User/listViews/Active_GV_Users_Mexico.listView-meta.xml
<ListView>
        <fullName>Active_GV_Users_Mexico</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>gvp__Geography_Key__c</columns>
        <columns>gvp__Mobile_Follow_Only__c</columns>
        <columns>CORE.USERS.DEPARTMENT</columns>
        <columns>LOCALE</columns>
        <columns>LANGUAGE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>BSM,mexico</value>
        </filters>
        <filters>
            <field>gvp__Geography_Key__c</field>
            <operation>contains</operation>
            <value>BSM</value>
        </filters>
        <label>Active GV Users Mexico</label>
        <language>en_US</language>
    </ListView>