SFUSA/force-app/main/default/objects/User/listViews/Community_Distributor_Plus_Users.listView-meta.xml
<ListView>
        <fullName>Community_Distributor_Plus_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>PASSWORD_EXPIRES</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>Access_Group__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>Distributor Community Plus</value>
        </filters>
        <label>Community - Distributor Plus Users</label>
        <language>en_US</language>
    </ListView>