SFUSA/force-app/main/default/objects/User/listViews/Community_Password_Reset.listView-meta.xml
<ListView>
        <fullName>Community_Password_Reset</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>PASSWORD_EXPIRES</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>Access_Group__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>Distributor Community</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_LOGIN</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>PASSWORD_EXPIRES</field>
            <operation>notEqual</operation>
        </filters>
        <label>Community - Password Reset</label>
        <language>en_US</language>
    </ListView>