SFUSA/force-app/main/default/objects/User/listViews/Community_Password_Reset_New.listView-meta.xml
<ListView>
        <fullName>Community_Password_Reset_New</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>PASSWORD_EXPIRES</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>Access_Group__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>Distributor Community</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_LOGIN</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>9/23/2016 12:00 AM</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Community - Password Reset New</label>
        <language>en_US</language>
    </ListView>