SFUSA/force-app/main/default/objects/User/listViews/Community_ServiceDesk_Users.listView-meta.xml
<ListView>
        <fullName>Community_ServiceDesk_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>PASSWORD_EXPIRES</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>ServiceDesk</value>
        </filters>
        <label>Community - ServiceDesk Users</label>
        <language>en_US</language>
    </ListView>