SFUSA/force-app/main/default/objects/User/listViews/Service_Cloud_GBS_Users.listView-meta.xml
<ListView>
        <fullName>Service_Cloud_GBS_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.SAML_SUBJECT</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>Access_Group__c</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>CORE.USERS.COMPANY_NAME</columns>
        <columns>CORE.USERS.DEPARTMENT</columns>
        <columns>CORE.USERS.DIVISION</columns>
        <columns>MANAGER</columns>
        <columns>CORE.USERS.ADDRESS_COUNTRY</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>startsWith</operation>
            <value>GBS,Global</value>
        </filters>
        <label>Service Cloud - GBS Users</label>
        <language>en_US</language>
    </ListView>